<resources>
    <string name="app_name" translatable="false">Pixlory: Color By Number</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-3271384969316133~8001083367</string>
    <string name="fb_app_id" translatable="false">2598724490632801</string>
    <string name="facebook_client_token" translatable="false">321326bef3360b6f40e8fab07c587126</string>
    <string name="rating_email" translatable="false">info@dcs-global-hk.com</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="bengali">Bengali</string>
    <string name="russian">Russian</string>
    <string name="portuguese">Portuguese</string>
    <string name="indonesian">Indonesian</string>
    <string name="german">German</string>
    <string name="italian">Italian</string>
    <string name="korean">Korean</string>
    <string name="please_select_language">Please select language first.</string>
    <string name="next">Next</string>
    <string name="no_email_client_installed">No email client installed</string>
    <string name="start">Start</string>
    <string name="please_select_language_first">Please select language first!</string>
    <string name="get_started">Get Started</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_check_your_wi_fi_setting_and_try_again">Please check your Wi-Fi setting and try again</string>
    <string name="go_to_setting">Go to Setting</string>
    <string name="this_action_can_contain_ads">This action can contain ads…</string>
    <string name="please_wait">Please wait...</string>
    <string name="preparing_library">Preparing your library...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_a_color_to_start_coloring">Pick a color to start coloring.</string>
    <string name="tap_the_matching_numbered_area_to_color">Tap the matching numbered area to color.</string>
    <string name="tap_here_if_you_can_t_find_the_color_area">Tap here if you can\'t find the color area.</string>
    <string name="restart_this_picture">Restart this Picture?</string>
    <string name="your_coloring_progress_will_be_lost_this_action_can_t_be_undone">Your coloring progress will be lost. This action can\'t be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="restart">Restart</string>
    <string name="color">Color</string>
    <string name="collection">Collection</string>
    <string name="my_work">My Work</string>
    <string name="library">Library</string>
    <string name="daily">Daily</string>
    <string name="color_realm">Color Realm</string>
    <string name="coloring_complete">Coloring Complete!</string>
    <string name="back_to_home">Back to Home</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="video">Video</string>
    <string name="skip">Skip</string>
    <string name="inter_draw_countdown">Ads will start in %1$ds</string>
    <string name="timelapse_unavailable">Video is not available for this picture yet.</string>
    <string name="timelapse_surpassed_format">Surpassed %1$s of players today</string>
    <string name="timelapse_one_more_format">1 more picture to surpass %1$s of players</string>
    <string name="picture">Picture</string>
    <string name="download_success">Download success</string>
    <string name="download_failed">Download failed!</string>
    <string name="share_failed">Share failed!</string>
    <string name="collected">Collected</string>
    <string name="achievement">Achievement</string>
    <string name="achievement_empty">No achievement here yet</string>
    <string name="achievement_progress_format" translatable="false">%1$d/%2$d</string>
    <string name="achievement_first_splash_title">First Splash</string>
    <string name="achievement_first_splash_desc">Open the app for the first time.</string>
    <string name="achievement_color_explorer_title">Color Explorer</string>
    <string name="achievement_color_explorer_desc">Return to the app for 3 days.</string>
    <string name="achievement_weekly_artist_title">Weekly Artist</string>
    <string name="achievement_weekly_artist_desc">Return to the app for 7 days.</string>
    <string name="achievement_color_enthusiast_title">Color Enthusiast</string>
    <string name="achievement_color_enthusiast_desc">Return to the app for 14 days.</string>
    <string name="achievement_creative_soul_title">Creative Soul</string>
    <string name="achievement_creative_soul_desc">Return to the app for 30 days.</string>
    <string name="achievement_master_colorist_title">Master Colorist</string>
    <string name="achievement_master_colorist_desc">Return to the app for 60 days.</string>
    <string name="achievement_color_legend_title">Color Legend</string>
    <string name="achievement_color_legend_desc">Return to the app for 100 days.</string>
    <string name="achievement_eternal_artist_title">Eternal Artist</string>
    <string name="achievement_eternal_artist_desc">Return to the app for 365 days.</string>
    <string name="achievement_first_masterpiece_title">First Masterpiece</string>
    <string name="achievement_first_masterpiece_desc">Complete your very first artwork.</string>
    <string name="achievement_rising_artist_title">Rising Artist</string>
    <string name="achievement_rising_artist_desc">Complete 5 different artwork.</string>
    <string name="achievement_gallery_builder_title">Gallery Builder</string>
    <string name="achievement_gallery_builder_desc">Complete 10 different artwork.</string>
    <string name="achievement_art_collector_title">Art Collector</string>
    <string name="achievement_art_collector_desc">Complete 15 different artwork.</string>
    <string name="achievement_color_virtuoso_title">Color Virtuoso</string>
    <string name="achievement_color_virtuoso_desc">Complete 25 different artwork.</string>
    <string name="achievement_master_of_colors_title">Master of Colors</string>
    <string name="achievement_master_of_colors_desc">Complete 40 different artwork.</string>
    <string name="achievement_anime_fan_title">Anime Fan</string>
    <string name="achievement_anime_fan_desc">Complete an artwork from the Manga &amp; Anime category.</string>
    <string name="achievement_inner_peace_title">Inner Peace</string>
    <string name="achievement_inner_peace_desc">Complete an artwork from the Meditate category.</string>
    <string name="achievement_summer_lover_title">Summer Lover</string>
    <string name="achievement_summer_lover_desc">Complete an artwork from the Summer category.</string>
    <string name="achievement_animal_friend_title">Animal Friend</string>
    <string name="achievement_animal_friend_desc">Complete an artwork from the Animal category.</string>
    <string name="achievement_festival_joy_title">Festival Joy</string>
    <string name="achievement_festival_joy_desc">Complete an artwork from the Festival category.</string>
    <string name="achievement_food_lover_title">Food Lover</string>
    <string name="achievement_food_lover_desc">Complete an artwork from the Foods category.</string>
    <string name="achievement_story_dreamer_title">Story Dreamer</string>
    <string name="achievement_story_dreamer_desc">Complete an artwork from the Fairy Tale category.</string>
    <string name="achievement_bloom_seeker_title">Bloom Seeker</string>
    <string name="achievement_bloom_seeker_desc">Complete an artwork from the Florals category.</string>
    <string name="achievement_art_enthusiast_title">Art Enthusiast</string>
    <string name="achievement_art_enthusiast_desc">Complete an artwork from the Art category.</string>
    <string name="achievement_world_explorer_title">World Explorer</string>
    <string name="achievement_world_explorer_desc">Complete an artwork from the Travel &amp; Wonders category.</string>
    <string name="achievement_playful_spirit_title">Playful Spirit</string>
    <string name="achievement_playful_spirit_desc">Complete an artwork from the Cartoon &amp; Game category.</string>
    <string name="achievement_nature_explorer_title">Nature Explorer</string>
    <string name="achievement_nature_explorer_desc">Complete an artwork from the Scenery category.</string>
    <string name="achievement_festival_of_fortune_title">Festival of Fortune</string>
    <string name="achievement_festival_of_fortune_desc">Complete every artwork in the Lunar New Year collection.</string>
    <string name="achievement_racing_spirit_title">Racing Spirit</string>
    <string name="achievement_racing_spirit_desc">Complete every artwork in the Racing Legend collection.</string>
    <string name="achievement_star_chaser_title">Star Chaser</string>
    <string name="achievement_star_chaser_desc">Complete every artwork in the Starlight Journey collection.</string>
    <string name="achievement_purrfect_companion_title">Purrfect Companion</string>
    <string name="achievement_purrfect_companion_desc">Complete every artwork in the Cat Moments collection.</string>
    <string name="achievement_easter_celebration_title">Easter Celebration</string>
    <string name="achievement_easter_celebration_desc">Complete every artwork in the Happy Easter Day collection.</string>
    <string name="achievement_glass_artisan_title">Glass Artisan</string>
    <string name="achievement_glass_artisan_desc">Complete every artwork in the Light Through Glass collection.</string>
    <string name="achievement_sweet_moments_title">Sweet Moments</string>
    <string name="achievement_sweet_moments_desc">Complete every artwork in the Sweet Paradise collection.</string>
    <string name="achievement_realm_explorer_title">Realm Explorer</string>
    <string name="achievement_realm_explorer_desc">Unlock your first area in the Color Realm.</string>
    <string name="achievement_growing_world_title">Growing World</string>
    <string name="achievement_growing_world_desc">Unlock 3 areas in the Color Realm.</string>
    <string name="achievement_realm_guardian_title">Realm Guardian</string>
    <string name="achievement_realm_guardian_desc">Unlock 6 areas in the Color Realm.</string>
    <string name="achievement_first_clue_title">First Clue</string>
    <string name="achievement_first_clue_desc">Use 1 hint to continue coloring.</string>
    <string name="achievement_hint_hunter_title">Hint Hunter</string>
    <string name="achievement_hint_hunter_desc">Use 5 hints to continue coloring.</string>
    <string name="achievement_smart_solver_title">Smart Solver</string>
    <string name="achievement_smart_solver_desc">Use 10 hints to continue coloring.</string>
    <string name="paint_drops_collected">Paint Drops Collected</string>
    <string name="color_realm_journey_title">Color Realm: A Journey of Color</string>
    <string name="days_explore">Day(s) Explore</string>
    <string name="works_completed">Work(s) Completed</string>
    <string name="areas_unlocked">Area(s) Unlocked</string>
    <string name="color_realm_quote">&quot;\nLet\'s bring color back\nto the world!</string>
    <string name="quick_guide">Quick Guide</string>
    <string name="collect_paint_drops_to_restore_and_unlock_new_areas_of_the_color_realm">Collect Paint Drops to restore and unlock new areas of the Color Realm.</string>
    <string name="complete_works">Complete Works</string>
    <string name="collect_paint_drops">Collect Paint Drops</string>
    <string name="unlock_new_areas">Unlock New Areas</string>
    <string name="need_more_paint_drops">Need More Paint Drops</string>
    <string name="complete_more_pictures_to_earn_paint_drops_and_unlock_this_area">Complete more pictures to earn paint drops and unlock this area.</string>
    <string name="go_to_library">Go to Library</string>
</resources>