<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_grey_50_20"
    android:padding="20dp"
    tools:context=".dialog.NeedMorePaintDialog"
    android:layoutDirection="ltr">

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_close_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_big_paint_drop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFirst"
        style="@style/Heading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/need_more_paint_drops"
        android:textColor="@color/grey_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivImage" />

    <TextView
        style="@style/BodyL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:id="@+id/tvSecond"
        android:text="@string/complete_more_pictures_to_earn_paint_drops_and_unlock_this_area"
        android:textColor="@color/grey_600"
        app:layout_constraintTop_toBottomOf="@id/tvFirst" />

    <TextView
        android:id="@+id/btnGoToLibrary"
        style="@style/ButtonM"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_gradient"
        android:gravity="center"
        android:minHeight="49dp"
        android:text="@string/go_to_library"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSecond" />

</androidx.constraintlayout.widget.ConstraintLayout>