<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_full_main_theme_01"
    tools:context=".activities.RealmGuideActivity">

    <ImageView
        android:id="@+id/btnClose"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_close_new"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/Heading1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:text="@string/quick_guide"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/btnClose"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnClose" />

    <TextView
        android:id="@+id/tvContent"
        style="@style/BodyL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/collect_paint_drops_to_restore_and_unlock_new_areas_of_the_color_realm"
        android:textColor="@color/grey_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <LinearLayout
        android:id="@+id/llFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvContent">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/iv_realm_guide_01" />

        <TextView
            style="@style/BodyL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/complete_works"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/arrow01"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_mini_right_arrow"
        app:layout_constraintBottom_toBottomOf="@id/llFirst"
        app:layout_constraintStart_toEndOf="@id/llFirst"
        app:layout_constraintTop_toTopOf="@id/llFirst" />


    <LinearLayout
        android:id="@+id/llSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrow01">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/iv_realm_guide_02" />

        <TextView
            style="@style/BodyL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/collect_paint_drops"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/arrow02"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/ic_mini_left_arrow_new"
        app:layout_constraintBottom_toBottomOf="@id/llSecond"
        app:layout_constraintEnd_toStartOf="@id/llSecond"
        app:layout_constraintTop_toTopOf="@id/llSecond" />


    <LinearLayout
        android:id="@+id/llThird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/arrow02">

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/iv_realm_guide_03" />

        <TextView
            style="@style/BodyL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/unlock_new_areas"
            android:textColor="@color/white" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>